--- a/.gitignore
+++ b/.gitignore
@@ -35,7 +35,7 @@ bld/
 .vs/
 # Uncomment if you have tasks that create the project's static files in wwwroot
 #wwwroot/
-config.js
+# config.js
 
 # Visual Studio 2017 auto generated files
 Generated\ Files/
@@ -349,6 +349,8 @@ MigrationBackup/
 
 # Ionide (cross platform F# VS Code tools) working folder
 .ionide/
-./config.js
-./client/dist/bundle.js
-./client/dist/bundle.js.license
+config.js
+
+client/dist/bundle.js
+client/dist/bundle.js.map
+client/dist/bundle.js.license
