--- a/.gitignore
+++ b/.gitignore
@@ -349,6 +349,7 @@ MigrationBackup/
 
 # Ionide (cross platform F# VS Code tools) working folder
 .ionide/
+*.pem
 config.js
 package-lock.json
 client/dist/bundle.js
